--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
 # create and drop tables and sequences, loads import.sql
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://localhost:6603/wxtms?characterEncoding=utf-8
+# none, validate, update, create, create-drop
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:6603/wxtms?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=wxtms_dev
 spring.datasource.password=wxtms_dev
 spring.datasource.hikari.maximumPoolSize=10
@@ -10,3 +11,7 @@ spring.datasource.hikari.minimumIdle=10
 # logging
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
+
+spring.thymeleaf.cache=false
+# Session timeout. If a duration suffix is not specified, seconds will be used.
+server.servlet.session.timeout=600
